istio-teaching/virtualservice/match/vs-match-authority-exact.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - authority:
        exact: "bookinfo.demo:30468"
    route:
    - destination:
        host: productpage
        port:
          number: 9080
